# EGGO.jl

./: .gitignore  LICENSE  NOTICE.md  Project.toml  README.md  versions.js
cpp/: CMakeLists.txt  README.md  run_example.cpp  run_example.jl
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: make.jl
models/: .gitattributes  Xy_efit01.bson  basis_functions.bson  basis_functions.h5  basis_functions_1d.bson  basis_functions_1d.h5  basis_functions_1d_cake02.bson  basis_functions_1d_cakenn.h5  basis_functions_1d_cakenn_jpar.h5  basis_functions_1d_efit01efit02cake02.h5  basis_functions_cake02.bson  basis_functions_ppffp.bson  coil_response.bson  complete_model_with_preprocessing.onnx  fitweight.h5  green.bson  green.h5  measured.bson  model1d_cakenn_free.bson  model_cake02.bson  model_cakenn_coils.bson  model_cakenn_coils_jpar.bson  model_cakenn_free.bson  model_cakenn_free.onnx  model_cakenn_ida_axissep_100772.bson  model_cakenn_ida_axissep_124412.bson  model_cakenn_ida_axissep_139283.bson  model_cakenn_ida_axissep_163932.bson  model_cakenn_ida_axissep_168192.bson  model_cakenn_ida_axissep_181293.bson  model_cakenn_ida_axissep_187874.bson  model_cakenn_ida_axissep_193394.bson  model_cakenn_ida_axissep_194541.bson  model_cakenn_ida_axissep_197556.bson  model_cakenn_ida_axissep_202379.bson  model_cakenn_ida_axissep_76758.bson  model_cakenn_ida_axissep_91001.bson  model_cakenn_ida_coils.bson  model_efit01.bson  model_efit01_coils.bson  (+8 more)
src/: EGGO.jl  free_eggo.jl  io.jl  structures.jl
test/: runtests.jl
v1.1.0/: .documenter-siteinfo.json  index.html
v1.1.1/: .documenter-siteinfo.json  index.html  objects.inv
v1.1.2/: .documenter-siteinfo.json  index.html  objects.inv
v1.1.3/: .documenter-siteinfo.json  index.html  objects.inv
v1.1.4/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v2.1.1/: .documenter-siteinfo.json  (+1 more)
(+65 files in other folders)
